# postgres-trial

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_users_table.py
postgres_trial/: main.py
src/postgres_trial/: main.py
src/postgres_trial/clients/: sql_client.py
src/postgres_trial/db/: database.py
src/postgres_trial/models/: __init__.py  user.py
